# file-sharing

./: .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml
client/: Cargo.toml
client/src/: main.rs  setup.rs
client_web/: package-lock.json  package.json
client_web/src/: App.jsx
merkle_tree/: Cargo.toml
merkle_tree/src/: lib.rs
scripts/: e2e_test.sh
server/: Cargo.toml
server/db/: 0001_create_documents_table.sql
server/src/: lib.rs  main.rs
server/tests/: integration_tests.rs
