[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4" # High performance, feature-rich web framework.
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # Serialization for json
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
rand = "0.8"

[dependencies.merkle_tree]
path = "../merkle_tree"

[lib]
name = "server"
path = "src/lib.rs"