[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4" # High performance, feature-rich web framework.
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # Serialization for json
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
rand = "0.8"
merkle_tree = { path = "../merkle_tree" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dotenvy = "0.15"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.103.0"

[lib]
name = "server"
path = "src/lib.rs"